# shimpz-brain

./: .dockerignore  Dockerfile  README.md  agent_runtime.py  pyproject.toml  runtime_api.py
codex/: README.md
codex/rootfs/custom-cont-init.d/: 11-shimpz-codex-init.sh
codex/rootfs/opt/shimpz-lib/: codex_auth_cache.py  codex_device_login.py
codex/tests/: test_codex_device_login.py  test_codex_instrument.py
rootfs/custom-cont-init.d/: 10-shimpz-init.sh
rootfs/defaults/: autostart
rootfs/defaults/shimpz/: CAPSULE.md  CAPSULE_MEMORY.md  CAPSULE_SETTINGS.json  CLAUDE.md  settings.json
rootfs/defaults/shimpz/caddy/: Caddyfile
rootfs/defaults/shimpz/memory/: MEMORY.md
rootfs/defaults/shimpz/memory/playbooks/: deploy-domain.md  dev-bootstrap.md  frontend-svelte.md  redpanda-queue-integration.md
rootfs/defaults/shimpz/skills/shimpz-web-design/: SKILL.md
rootfs/defaults/shimpz/skills/shimpz-web-design/references/: checklist.md  contrast.py
rootfs/defaults/shimpz/supervisor/: supervisord.conf
rootfs/etc/s6-overlay/s6-rc.d/svc-shimpz-headless/: run
rootfs/opt/shimpz-lib/: cfdriver.sh  pgdriver.sh  shimpzaudit.py  shimpzbrowser.py  shimpzchan.py  shimpzchat.py  shimpzdetect.sh  shimpzdriver.sh  shimpzemb.py  shimpzenv.py  shimpzi18n.py  shimpzipc.py  shimpzmanifest.py  shimpzopenai.py  shimpzprompt.py  shimpzr2.py
rootfs/opt/shimpz-lib/shimpzbus/: pyproject.toml
rootfs/opt/shimpz-lib/shimpzbus/src/shimpzbus/: __init__.py
rootfs/usr/local/share/shimpz-chat/: decision.schema.json  instrument-prompt.txt
rootfs/usr/local/share/shimpz-pdf/: theme.css
rootfs/usr/local/share/shimpz-std/: gitignore  ruff.toml
tests/: test_agent_runtime.py  test_chat_instrument.py  test_image_contract.py  test_runtime_api.py
