[project]
name = "shimpz-brain-runtime"
version = "0.0.0"
requires-python = "==3.14.*"
dependencies = [
    "confluent-kafka==2.14.2",
    "model2vec==0.8.2",
    "numpy==2.5.1",
    "python-telegram-bot==22.8",
    "requests==2.34.2",
    "trafilatura==2.1.0",
    # Provider-neutral Capsule Brain.  Every agent/tool/runtime dependency is exact so a rebuilt
    # image cannot silently alter the Power boundary or checkpoint format.
    "fastapi==0.139.2",
    "langchain==1.3.14",
    "langchain-anthropic==1.4.8",
    "langchain-openai==1.3.5",
    "langgraph==1.2.9",
    "langgraph-checkpoint-sqlite==3.1.0",
    "uvicorn==0.51.0",
]

[tool.uv]
package = false
