[project]
name = "shimpz-brain-runtime"
version = "0.0.0"
requires-python = "==3.14.*"
dependencies = [
    # Provider-neutral Team Brain.  Every agent/tool/runtime dependency is exact so a rebuilt
    # image cannot silently alter the Power boundary or checkpoint format.
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "langchain==1.3.14",
    "langchain-anthropic==1.4.8",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    "langgraph==1.2.9",
    "langgraph-checkpoint-sqlite==3.1.0",
    "pydantic==2.13.4",
    "uvicorn==0.51.0",
]

[tool.uv]
package = false
