[project]
name = "shimpzbus"
version = "0.6.0"
description = "Shimpz's standard inter-service library: event bus (Redpanda/Kafka API, FastStream engine) + service registry/discovery + HTTP request-reply, all with retries and dead-letter."
requires-python = ">=3.11"
# Floors track current latest; no upper caps so rebuilds always pull the newest. The FastStream
# consumer API was validated at 0.7.x — a future major bump just needs a quick run_worker revalidation.
dependencies = [
    "faststream[kafka]>=0.7.1",  # battle-tested consumer engine (aiokafka) — run_worker
    "confluent-kafka>=2.14.2",   # sync idempotent producer — publish() (loop-free, callable anywhere)
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shimpzbus"]
